# Simple-Retro-Engine

./: .gitignore  CMakeLists.txt  README.md  gitCheatSheet.txt  planning.txt  vcpkg.json
include/: AbstractScene.h  ComponentInterface.h  Engine.h  EngineManager.h  Entity.h  EventHandler.h  InputSystem.h  Manager.h  Navigator.h  Observable.h  Observer.h  RenderableComponent.h  Renderer.h  RendererInterface.h  RenderingObserver.h  RenderingSystem.h  Scene.h  SceneInterface.h  SceneNavigatorInterface.h  Sprite.h  Subject.h  SystemInterface.h  Window.h  WindowInterface.h
src/: Engine.cpp  EngineManager.cpp  Observable.cpp  Renderer.cpp  RenderingObserver.cpp  RenderingSystem.cpp  Sprite.cpp  Subject.cpp  Window.cpp
tests/: test_Engine.cpp  test_Observable.cpp  test_Scene.cpp  test_Subject.cpp
